syntax = "proto3";
//package user;
    option java_multiple_files= true;
option java_package = "proto.getUser.proto";
option java_outer_classname = "getUserProto";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "user.proto";

message GetUserByUniqueFieldRequest {
    GetUserUniqueFields filterBy = 1;
    string value = 2;
}

message GetAllUsersRequest {
  User filter = 1;
  int32 page = 2;
  int32 size = 3;
}

message GetAllUsersResponse {
  repeated User users = 1;
}

message User {
  string id = 1;
  string phone_number = 2;
  string email = 3;
  string last_name = 4;
  string first_name = 5;
  string role = 6;
  bool email_verified = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}
enum GetUserUniqueFields{
  ID = 0;
  PHONE_NUMBER=1;
  EMAIL=2;
}